# mahjong

./: .cursorrules  .gitignore  README.md  demo_cli.py  game_run_rule.md  mahjong_theory.md  main.py  pyproject.toml  test_ai_battle.py  test_ai_battle_simple.py  test_exchange.py  test_game.py  test_shanten_ai.py  项目总结.md
ai/: __init__.py  advanced_ai.py  aggressive_ai.py  base_ai.py  mcts_ai.py  shanten_ai.py  simple_ai.py  trainer_ai.py
docs/: sichuan_mahjong_rules.md
game/: __init__.py  deck.py  game_engine.py  player.py  tile.py
rules/: __init__.py  base_rule.py  national_rule.py  sichuan_rule.py
ui/: game_window.py  main_menu.py
utils/: __init__.py  font_config.py  logger.py
