[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mahjong2"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A Python-based Mahjong game with different rule sets and AI players."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
"Homepage" = "https://github.com/kangsive/mahjong"
"Bug Tracker" = "https://github.com/kangsive/mahjong/issues"

[tool.setuptools.packages.find]
include = ["game", "rules", "ai", "ui", "utils"] 